--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -137,9 +137,7 @@
 
 \chapter{Introduction}
 \label{intro}
-
-
-This is the introduction.
+Humans reason about space on a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next-to the house", instead of (quantitative) terms like, "the exterior part of the elm tree is 4.54 meters away from the exterior part of the house". The main distinction between the two is based on the level of spatial abstraction; qualitative represents a high level while quantitative represent a low level of abstraction. Our natural cognitive intuition to use qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research \cite{freksa1991qsr} \cite{Cohn:2001:QSR}.
 
 
 
@@ -308,19 +306,41 @@ The CRR is a framework for validating conceptual design requirements against CAA
 The goal of the CRR is to build a computational framework that represents and reasons about design requirements in the context of conceptual design requirement validation.     
 
 \section{Design Problem}
-Humans reason about space on a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next-to the house", instead of (quantitative) terms like, "the exterior part of the elm tree is 4.54 meters away from the exterior part of the house". The main distinction between the two is based on the level of spatial abstraction; qualitative represents a high level while quantitative represent a low level of abstraction. Our natural cognitive intuition to use qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research \cite{freksa1991qsr} \cite{Cohn:2001:QSR}.
 
-The domain of architectural design is quite interesting in this respect because it relies on both aspects of space: qualitative and quantitative. In the architectural design literature \cite{} this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of this phrase supports the doctrine that the form (structure) should be determined by its function (purpose). For decades there has been a plethora of debate on the interpretation of these claims and its validity with a practical design context. For the purposes here the focus is not on the philosophy of design or any argument about the validity of such claims, but is an introduction to the idea that architectural design is inherently defined by and intertwined with the qualitative and quantitative aspects of space.
+The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function from several levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. At the conceptual level an architectural design can be described based on high level experiential features such as continuity, enclosure, privacy, and visibility and spatial qualities of orientation, positioning, and proximity. The various levels of the design abstraction are connected because high level conceptual features emerge from and are defined by specific low level spatial characteristics of the structural form. For example, the visibility characteristics of a design, with respect to objects being visible or not-visible, is grounded to the specific (quantitative) spatial geometries of the buildings. 
 
-Research that supports this perspective on design and space, address many design problems as they occur during the lifetime of an architectural design project, such as: design conceptualization, geometric modeling, structural consistency \& code checking, and many others \cite{Bayazit} \cite{bhattSpatialComputing}. However, most research in this area unfortunately tends to focus on one aspect of space or the other but not both, i.e. quantitative but not qualitative or qualitative but not quantitative. For example, structural consistency \& code checking \cite{} involves the process of validating an architectural design against constraints on the quantitative geometric structures of the design, while design conceptualization involve modeling the basic spaces / zones of the architectural design from a qualitative perspective. 
+Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} are based on spatial representations that are quantitative and lack the capability to provide design assistance to architects at a conceptual level. This type of a computational environment is well suited for certain purposes, such as a designing a schematization that can be used as a blueprint for the realization of the design, but it does not support reasoning at a higher level of abstraction. For example, the tasks an architect might face during the design conceptualization phase of a museum include, amount other things, defining high level functional and aesthetic requirements of the museum's design, such as the following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplify:
+\begin{quote}
+\emph{``The current topographic conditions of the site, where the larger trees are located in an area that is more elevated than the whole northern rim of the plot, made it possible to install a huge underground floor in the already existing depression, whose covering creates a gentle artificial elevation that perspectively accentuates and enhances the whole architectural composition. The distribution of the construction volumes fundamentally followed a desire for horizontality, allowing one to read the continuity of the green space beyond the construction and in all directions.''}
+\end{quote}
+\begin{quote}
+\emph{``This sober, rational and markedly horizontal structure is distinctive for its laminar exterior, its modular repetition, austere design and the hard quality of the materials which shape it, concrete and glass.''}
+\end{quote}
+Environmental aspects of the museums design, such as these, encompass high level spatial design patterns that emerge from the structural form of the building at the quantitative level \cite{carl}. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level through spatial patterns at the qualitative level.
 
-The tendency to focus on one aspect of space is especially true for state-of-the-art CAAD programs. This happens because CAAD programs provide an environment for architects to build a precise schematization of an architectural design with the purpose of using it as a blueprint during the design's realization. In essence, this means that there needs to be a direct and one-to-one correlation between the schematization of the design as defined by its representation of space and the design's physical manifestation in the real world. Consequently, CAAD programs represent the spatial features of a design, with respect to the individual elements that make up the design, from a perspective that captures its precise geometric form, i.e. the size, shape, location, and placement. This representation is akin to the representation of spatial objects in an coordinate system in R2.
 
-This type of representation serves its purpose well (building a design in the real world) and can provides for some types of spatial reasoning over it, such as geometric reasoning (i.e. properties of angles, shapes, sizes, parallelism, etc.) and checking for higher level requirements, such as the load bearing capacity of building elements and structural integrity. However, the second form of reasoning requires additional knowledge (building materials and load barring properties) that go beyond the semantics of the design's spatial quantities. In this regard, the CAAD based representation makes it difficult to reason about aspects of the design from a conceptual level, i.e. the semantics that involve the design's function or purpose. The difficulty emerges in this regard because the conceptual aspects of a design define its abstract features while the CAAD based representation is grounded to a concrete and spatially general form that lacks the semantic at the conceptual level. In other words, there is a \emph{semantic gap} between the conceptual aspects of the design and it's CAAD based representation that is separated by the different levels of abstraction for each.
+Reasoning at a high level of abstraction requires the semantics of the underlying representation at a similar level. For example, the semantics of the design representation on the conceptual level involve abstract spatial entities such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. However, the spatial representation semantics of current CAAD programs are based on geometric spatial primitives of of points, lines, and polygons which do not represent the design on a level that is necessary for high level conceptual reasoning. 
 
-This is where this thesis hopes to provide it contribution, by providing a framework that bridges the gap between a design's conceptualizations to it's precise geometric underpinnings.  
+\begin{figure}[H]
+\centering
+\includegraphics[width=100mm]{multi-perspective-reps}
+\caption{Architectural Levels of Abstraction - Source \cite{bhatt-spatial-computing}}
+\label{multi-perspective-reps}
+\end{figure}
 
-  
+The objective of this thesis is an initial step at building a framework that bridges the gap between the quantitative representation of a design in the context of a CAAD based system to the conceptual specifications of the design. Specifically, the framework focuses on supporting a designer by validating conceptual requirements against a work-in-progress design built in a CAAD program. 
+
+
+
+%The domain of architectural design is quite interesting in this respect because it relies on both aspects of space: qualitative and quantitative. In the architectural design literature \cite{} this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of this phrase supports the doctrine that the form (structure) should be determined by its function (purpose). For decades there has been a plethora of debate on the interpretation of these claims and its validity with a practical design context. For the purposes here the focus is not on the philosophy of design or any argument about the validity of such claims, but is an introduction to the idea that architectural design is inherently defined by and intertwined with the qualitative and quantitative aspects of space.
+
+%Research that supports this perspective on design and space, address many design problems as they occur during the lifetime of an architectural design project, such as: design conceptualization, geometric modeling, structural consistency \& code checking, and many others \cite{Bayazit} \cite{bhatt-spatial-computing}. However, most research in this area unfortunately tends to focus on one aspect of space or the other but not both, i.e. quantitative but not qualitative or qualitative but not quantitative. For example, structural consistency \& code checking \cite{} involves the process of validating an architectural design against constraints on the quantitative geometric structures of the design, while design conceptualization involve modeling the basic spaces / zones of the architectural design from a qualitative perspective. 
+
+%The tendency to focus on one aspect of space is especially true for state-of-the-art CAAD programs. This happens because CAAD programs provide an environment for architects to build a precise schematization of an architectural design with the purpose of using it as a blueprint during the design's realization. In essence, this means that there needs to be a direct and one-to-one correlation between the schematization of the design as defined by its representation of space and the design's physical manifestation in the real world. Consequently, CAAD programs represent the spatial features of a design, with respect to the individual elements that make up the design, from a perspective that captures its precise geometric form, i.e. the size, shape, location, and placement.
+
+%This type of representation serves its purpose well (building a design in the real world) and can provides for some types of spatial reasoning over it, such as geometric reasoning (i.e. properties of angles, shapes, sizes, parallelism, etc.) and checking for higher level requirements, such as the load bearing capacity of building elements and structural integrity. However, the second form of reasoning requires additional knowledge (building materials and load barring properties) that go beyond the semantics of the design's spatial quantities. In this regard, the CAAD based representation makes it difficult to reason about aspects of the design from a conceptual level, i.e. the semantics that involve the design's function or purpose. The difficulty emerges in this regard because the conceptual aspects of a design define its abstract features while the CAAD based representation is grounded to a concrete and spatially general form that lacks the semantic at the conceptual level. In other words, there is a \emph{semantic gap} between the conceptual aspects of the design and it's CAAD based representation that is separated by the different levels of abstraction for each.
+
+%This is where this thesis hopes to provide it contribution, by providing a framework that bridges the gap between a design's conceptualizations to it's precise geometric underpinnings.  
 
 %construct a designs in a manner that directly corresponds to the realization of the design and therefore requires a precise representation of space. This type of representation needs to know about many aspects of a designs spatial features including the size, shape, dimensions, placement, and location of the individual elements that make up the building.   
 
@@ -372,7 +392,7 @@ The design multi-hierarchy developed in this section is built on the mapping of 
  
 \begin{figure}[H]
 \centering
-\includegraphics[width=140mm]{hierarchy2}
+\includegraphics[width=140mm]{spatial-qualities-hierarchy}
 \caption{Design Space Multi-Hierarchy}
 \label{hierarchy}
 \end{figure}
